# kustomize-demo

./: Dockerfile  README.md  main.py  pyproject.toml
