[tool.poetry]
name = "scripts-demo"
version = "0.1.0"
description = ""
authors = ["Romaric Philogène <rphilogene@qovery.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
